# cargo-android

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
cargo-android/: Cargo.toml  README.md
cargo-android/src/: aab.rs  apk.rs  lib.rs  main.rs  manifest.rs
ndk-build/: Cargo.toml
ndk-build/src/: apk.rs  cargo.rs  error.rs  manifest.rs  ndk.rs
ndk-examples/: Cargo.toml
