[package]
name = "cargo-android"
version = "0.10.0"
authors = [
    "The Rust Windowing contributors",
    "Raphael Mateus das Neves",
]
edition = "2021"
description = "Helps cargo build APKs and AABs"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]

[dependencies]
anyhow = "1"
cargo-subcommand = "0"
clap = { version = "4", features = ["derive"] }
dunce = "1"
env_logger = "0"
ndk-build = { path = "../ndk-build" }
serde = "1"
thiserror = "2"
toml = "0"