[package]
name = "ndk-build"
version = "0.10.0"
authors = ["The Rust Windowing contributors"]
edition = "2021"
description = "Utilities for building Android binaries"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/ndk-build"
homepage = "https://github.com/rust-mobile/cargo-apk"
repository = "https://github.com/rust-mobile/cargo-apk"

[dependencies]
dirs = "5"
dunce = "1"
quick-xml = { version = "0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
which = "7"